[package]
name = "dtorrent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha-1 = '0.10.0'
native-tls = "0.2"
chrono = "0.4"
rand = "0.8.5"
bencoder = { path = "../bencoder" }
tokio = { version = "1", features = ["rt-multi-thread","macros"]}
url_encoder = { path = "../url_encoder" }
clap = { version = "4.1.1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
